Fix for strange sampling interval bug